Testnet contract updated

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
-REACT_APP_CHAIN_ID = "43114"
+REACT_APP_CHAIN_ID = "43113"
 REACT_APP_GTAG = "G-ER3FJJ4V38"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_1 = "https://api.avax.network/ext/bc/C/rpc"
+REACT_APP_NODE_1 = "https://api.avax-test.network/ext/bc/C/rpc"
 
 REACT_APP_SUBGRAPH_PROFILE = "https://api.thegraph.com/subgraphs/name/lydiaswap/profile"
