--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-scripts": "^4.0.1",
     "styled-components": "^5.1.1",
     "typescript": "^4.1.5",
-    "web3": "^1.4.0"
+    "web3": "1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
