--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "graphql-request": "^3.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "lottie-react-web": "^2.2.2",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
